try to use dlmgr, but it doesn't support https
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Nanidroid</string>
+
+
+  <string name="dl_complete">Download Completed</string>
+  <string name="dl_note">%1$s is ready to be installed</string>
 </resources>
