--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,4 +21,5 @@
   <string name="menu_about">About</string>
   <string name="menu_feedback">Provide Feedback</string>
   <string name="feedback_url">http://blog.cattail-sw.com/nanidroid-feedback/</string>
+  <string name="about_title">About Nanidroid</string>
 </resources>
