--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,4 +25,16 @@
   <string name="setup_btn_text">Setup</string>
   <string name="enable_analytic_title">Allow Anonymous Usage Data</string>
   <string name="enable_analytic_desc">Allow using Google Analytics to collect anonymous usage data to help improve this product</string>
+
+  <string name="more_g_enter_url_text">Enter URL</string>
+  <string name="more_g_from_SD_text">Install from SD card</string>
+  <string name="more_g_ghost_town_text">Ghost Town portal</string>
+  <string name="err_invalid_url">Invalid URL.  URL must end with .nar or .zip</string>
+  <string name="err_no_nar_folder">No Nar folder found on SD card</string>
+  <string name="err_no_nar_file">No Nar file found</string>
+  <string name="dlg_sel_nar_title">Select one file to install</string>
+  <string name="dlg_sel_nar_install_text">Install</string>
+  <string name="btn_dl_text">Download</string>
+<!--  <string name=""></string> -->
+
 </resources>
