add more ghost function dialog
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,7 @@
   <string name="enable_analytic_title">Allow Anonymous Usage Data</string>
   <string name="enable_analytic_desc">Allow using Google Analytics to collect anonymous usage data to help improve this product</string>
 
+  <string name="more_g_title">To Get More Ghosts</string>
   <string name="more_g_enter_url_text">Enter URL</string>
   <string name="more_g_from_SD_text">Install from SD card</string>
   <string name="more_g_ghost_town_text">Ghost Town portal</string>
