--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -5,7 +5,7 @@
   <string name="list_ghost_btn_text">ゴースト切り替え</string>
   <string name="update_btn_text">更新</string>
   <string name="help_btn_text">？</string>
-  <string name="more_ghosts_btn_text">他のゴースト</string>
+  <string name="more_ghosts_btn_text">ゴーストを追加</string>
   <string name="list_ghost_dlg_title">インストールされたゴースト</string>
   <string name="no_readme_dlg_title">このゴーストに切り替えますか？</string>
   <string name="no_readme_text">ゴースト %1$s は説明文がございません。切り替えますか？</string>
@@ -21,5 +21,16 @@
   <string name="setup_btn_text">設定</string>
   <string name="enable_analytic_title">使用情報の収集</string>
   <string name="enable_analytic_desc">アプリ改善のデータとしてGoogle Analyticsを使って匿名の使用情報を収集する</string>
+  <string name="more_g_title">ゴーストを追加する</string>
+  <string name="more_g_enter_url_text">URL入力</string>
+  <string name="more_g_from_SD_text">SDカードから追加</string>
+  <string name="more_g_ghost_town_text">ゴーストポータルサイト</string>
+  <string name="err_invalid_url">URLが間違っています。Httpから始まり、.narや.zipでおわりのURLだけがダウンロードできます。</string>
+  <string name="err_nar_title">エラー：SDカードから追加</string>
+  <string name="err_no_nar_folder">SDカード上にはNarフォルダが見つかりません</string>
+  <string name="err_no_nar_file">Narファイルが見つかりません</string>
+  <string name="dlg_sel_nar_title">一つを選んでください</string>
+  <string name="dlg_sel_nar_install_text">インストール</string>
+  <string name="btn_dl_text">ダウンロード</string>
     
 </resources>
