--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,5 +44,7 @@
   <string name="url_support_ops">http://blog.cattail-sw.com/?p=212</string>
 
 <!--  <string name=""></string> -->
-
+  <string name="unsupported_shiori">\\0\\s0Sorry, this Ghost is using a SHIORI that is not yet supported by Nanidroid!</string>
+  <string name="unsupported_shiori_ongchanging">Changing Ghost to %1$s</string>
+  <string name="unsupported_shiori_onclose">Thank you for using Nanidroid!</string>
 </resources>
