--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,7 +33,7 @@
   <string name="err_invalid_url">Invalid URL.  URL must end with .nar or .zip</string>
   <string name="err_nar_title">Error installing from SD card</string>
   <string name="err_no_nar_folder">No Nar folder found on SD card</string>
-  <string name="err_no_nar_file">No Nar file found</string>
+  <string name="err_no_nar_file">No .nar file found</string>
   <string name="dlg_sel_nar_title">Select one file to install</string>
   <string name="dlg_sel_nar_install_text">Install</string>
   <string name="btn_dl_text">Download</string>
