--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,8 @@
   <string name="url_help_install">http://blog.cattail-sw.com/?p=197</string>
   <string name="help_supported_ops">Show Supported Functions</string>
   <string name="url_support_ops">http://blog.cattail-sw.com/?p=212</string>
+  
+  <string name="user_input_dlg_title">Input</string>
 
 <!--  <string name=""></string> -->
   <string name="unsupported_shiori">\\0\\s0Sorry, this Ghost is using a SHIORI that is not yet supported by Nanidroid!\\e</string>
