--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,6 +47,9 @@
   <string name="user_sel_dlg_title">Please Select One</string>
   <string name="err_title">Error</string>
   <string name="err_no_sdcard">No SD Card! Aborting</string>
+  
+  <string name="prog_startup">Starting Nanidroid</string>
+  <string name="load_g">Loading Ghost\n%1$s&#8230;</string>
 
 <!--  <string name=""></string> -->
   <string name="unsupported_shiori">\\0\\s0Sorry, this Ghost is using a SHIORI that is not yet supported by Nanidroid!\\e</string>
